# task-manager-rs

./: .gitignore  Cargo.toml  Dockerfile.ubuntu  README.md  build.rs  justfile
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
.github/workflows/: release.yml
report/: analysis-qt-qml.typ  ieee.csl  report.bib  report.typ  work.bib
report/fonts/: README.md
slides/: slides.md
src/: main.rs
src/manager/: get_sorted_process_list.rs  manager.rs  mod.rs  proc_stat.rs
src/manager/traits/: command_string.rs  cpu_percent.rs  get_using_files.rs  memory_bytes.rs  mod.rs  process_name.rs  sort_my_processes.rs  to_my_processes.rs  to_root_parents_and_children.rs  to_standard_list_view_items.rs  username.rs
src/utils/: human_readable_byte.rs  mod.rs  parse_search_query.rs  vec_take.rs
ui/: app.slint
ui/components/: process.slint
