[package]
name = "task-manager-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
nix = "0.30.1"
procfs = "0.17.0"
slint = { version = "1.11.0", features = ["backend-winit-wayland"] }
tokio = { version = "1.45.1", features = ["full"] }
uzers = "0.12.1"

[profile.release]
opt-level = 3
lto = true
debug = false

[build-dependencies]
slint-build = "1.11.0"
