[package]
name = "task-manager-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["Delnegend <kien@delnegend.com>"]
license = "GNU GPLv3"
description = "A simple task manager for Linux written in Rust"

[dependencies]
chrono = "0.4.41"
nix = { version = "0.30.1", features = ["signal"] }
procfs = "0.17.0"
slint = "1.11.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uzers = "0.12.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[dev-dependencies]
tempfile = "3.20.0"

[build-dependencies]
slint-build = "1.11.0"
regex = "1.11.1"

[package.metadata.deb]
maintainer = "Delnegend <kien@delnegend.com>"
copyright = "2024 Delnegend"
license-file = ["LICENSE", "0"]
extended-description = """\
A simple task manager for Linux, providing insights into running processes.
Written in Rust for performance and safety."""

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/task-manager-rs", dest = "/usr/bin/task-manager-rs", mode = "0755" },
]
